# Arkanoid

./: CMakeLists.txt  README.md  game.sublime-project
conf/: arkanoid.conf
include/: arkanoid.hpp  ball.hpp  bat.hpp  config.hpp  image.hpp  util.h
src/: CMakeLists.txt  arkanoid.cpp  ball.cpp  bat.cpp  config.cpp  game.cpp  image.cpp
